# fit-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: __init__.py  main.py
app/agents/: knowledge_agent.py  nutrition_agent.py  orchestrator.py  safety_agent.py  workout_agent.py
app/api/: routes.py
app/core/: config.py
app/models/: __init__.py  domain.py  requests.py  responses.py
app/repositories/: base.py  factory.py  memory.py  sqlite.py
scripts/: stability_check.py
tests/: test_agent_flows.py  test_health.py  test_sqlite_repository.py
